--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "aws-amplify-react-native": "^7.0.2",
     "expo": "~47.0.12",
     "expo-barcode-scanner": "^12.1.0",
+    "expo-build-properties": "~0.4.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gifted-charts": "^1.2.42",
     "react-native-google-mobile-ads": "^9.1.1",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-svg": "^13.8.0",
     "react-native-vector-icons": "^9.2.0",
-    "sentry-expo": "^6.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-build-properties": "~0.4.1"
+    "sentry-expo": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
